compiler/test/fail_compilation/fix21197.d
import std.range;
void main()
{
    alias T = typeof((int[]).front);
}